Fixed up tests for Gradle build. Now all the tests run and pass